--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A seneca data store plugin for CockroachDB ",
   "main": "cockroach-store",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./test.sh"
   },
   "repository": {
     "type": "git",
@@ -31,5 +31,11 @@
   "dependencies": {
     "lodash": "^3.9.3",
     "roachjs": "^0.2.20"
+  },
+  "devDependencies": {
+    "async": "~0.9.0",
+    "seneca": "plugin",
+    "mocha": "~1.20.1",
+    "seneca-store-test": "~0.2.2"
   }
 }
